--- a/vue-slider-markup-base/css/style.css
+++ b/vue-slider-markup-base/css/style.css
@@ -3,8 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: lightgrey;
+}
 
 .container {
+    border: 2px solid lightskyblue;
     height: 100vh;
     display: flex;
     justify-content: center;
